Trying to fix home page background image on mobile

--- a/website_frontend/src/pages/Home.module.css
+++ b/website_frontend/src/pages/Home.module.css
@@ -266,5 +266,6 @@
 @media only screen and (max-width: 500px) {
     .sectionOne {
         background-position: 20% 20%;
+        background-attachment: unset;
     }
 }
